--- a/src/web/static/styles.css
+++ b/src/web/static/styles.css
@@ -298,7 +298,9 @@ th {
   }
 
   th:nth-child(6),
-  td:nth-child(6) {
+  td:nth-child(6),
+  th:nth-child(7),
+  td:nth-child(7) {
     display: none;
   }
 }
